--- a/ForLoops/ForLoops/ForLoops.csproj
+++ b/ForLoops/ForLoops/ForLoops.csproj
@@ -42,9 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\UserInput.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="InputNumberFromUser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
